--- a/src/app.css
+++ b/src/app.css
@@ -1,1 +1,13 @@
 @import "tailwindcss";
+
+html, body {
+    width: 100vw;
+    height: 100vh;
+    margin: 0;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  
